# audit-userspace-rs

./: .gitignore  Cargo.toml  README.md
auparse-sys/: Cargo.toml  build.rs
auparse-sys/src/: lib.rs
examples/: audisp.rs  dump.rs  feed.rs  uptime.rs
src/: lib.rs
src/auparse/: entry.rs  error.rs  feed.rs  log.rs  logs.rs  mod.rs  types.rs  util.rs
