[package]
name = "audit-userspace-rs"
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
chrono = "0.4"
signal-hook = "0.3"
mio = { version = "0.8", features = ["os-ext"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log4rs = "1.2"

[dependencies]
log = "0.4"
thiserror = "1"
crossbeam-channel = "0.5"
auparse-sys = { path = "auparse-sys" }

[workspace]
members = [
    "auparse-sys"
]
